--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,10 +21,12 @@ requirements:
     - xtensor
     - gmattensor
     - gmatelastic
+    - qpot
   run:
     - xtensor
     - gmattensor
     - gmatelastic
+    - qpot
 
 test:
   commands:
